@@ -34,21 +34,13 @@ int Zombie::NewPath(Tile_coord s, Tile_coord d, Pathfinder_client *)
 	dest = d;
 	cur = s;			// Get current coords.
 	sum = 0;			// Clear accumulator.
-	long deltax = d.tx - cur.tx;
-	long deltay = d.ty - cur.ty;
+	long deltax = Tile_coord::delta(cur.tx, dest.tx);
+	long deltay = Tile_coord::delta(cur.ty, dest.ty);
 	if (!deltax && !deltay)		// Going nowhere?
 		{
 		major_distance = 0;
 		return (0);
 		}		
-	if (deltax < -c_num_tiles/2)	// Wrapping round the world?
-		deltax += c_num_tiles;
-	else if (deltax > c_num_tiles/2)
-		deltax -= c_num_tiles;
-	if (deltay < -c_num_tiles/2)
-		deltay += c_num_tiles;
-	else if (deltay > c_num_tiles/2)
-		deltay -= c_num_tiles;
 	unsigned int abs_deltax, abs_deltay;
 	int x_dir, y_dir;
 	if (deltay >= 0)		// Figure directions.
