@@ -1,3 +1,7 @@
+2001-04-20  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* World-wrapping is kind-of working a little (on occasion).
+
 2001-04-18  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
 	* data/savegump.shp: touched up a bit
 
